--- a/index.html
+++ b/index.html
@@ -593,7 +593,48 @@
         </section>
     </div>
     <!--Footer Section-->
+    <div class="container">
+        <section class="footer">
+            <div class="box-container">
+                <div class="box">
+                    <h3>Location</h3>
+                    <a href="#">thai</a>
+                    <a href="#">japan</a>
+                    <a href="#">france</a>
+                    <a href="#">chaina</a>
+                    <a href="#">korea</a>
+                </div>
+                <div class="box">
+                    <h3>quick links</h3>
+                    <a href="#">dishes</a>
+                    <a href="#">about</a>
+                    <a href="#">menu</a>
+                    <a href="#">review</a>
+                    <a href="#">order</a>
+                </div>
+                <div class="box">
+                    <h3>follow us</h3>
+                    <a href="#">facebook</a>
+                    <a href="#">instargram</a>
+                    <a href="#">twitter</a>
+                    <a href="#">linkedin</a>
+                </div>
+                <div class="box">
+                    <h3>Contact info</h3>
+                    <a href="#">012-345-6789</a>
+                    <a href="#">099-102-5757</a>
+                    <a href="#">se-resto@gmail.com</a>
+                    <a href="#">review</a>
+                    <a href="#">Nakhonpathom, Thailand</a>
+                </div>
+            </div>
+            <div class="credit">copyright @ 2023 By <span>SE NPRU</span></div>
+        </section>
+    </div>
     <!--Loader Section-->
+    <div class="loder-container">
+        <img src="./images/loader.gif" alt="">
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
     <script src="./index.js"></script>
